НАКОНЕЦ-ТО НЕВЕРОЯТНЕЙШИЙ КОММИТ ПО НЬЮМАН ТЕСТАМ: добавлен файл типа .json, в котором записаны все ньюман тесты, а также таблица